--- a/core/translations.yaml
+++ b/core/translations.yaml
@@ -20,6 +20,74 @@ header:
   description:
     ja: "12カ月移動累計で成長ドライバーとリスクを直感的に把握し、次の一手を素早く導きます。"
     en: "Understand growth drivers and risks through a rolling 12-month view and decide the next action quickly."
+  actions:
+    primary:
+      label:
+        ja: "サンプルデータで試す"
+        en: "Try with sample data"
+      description:
+        ja: "テンプレートとデモデータですぐにダッシュボードを体験"
+        en: "Preview the dashboard instantly with demo data templates."
+      href:
+        ja: "?nav=import"
+        en: "?nav=import"
+    secondary:
+      label:
+        ja: "データ取込ガイドを見る"
+        en: "Open data import guide"
+      description:
+        ja: "CSV/Excelの整形とテンプレートのポイントを確認"
+        en: "Review CSV/Excel preparation tips and templates."
+      href:
+        ja: "?nav=help"
+        en: "?nav=help"
+    note:
+      ja: "ダッシュボードの主要ワークフローをこの1画面に集約しました。"
+      en: "All essential workflows are curated on this single screen."
+  stats:
+    coverage:
+      value:
+        ja: "12ヶ月"
+        en: "12 months"
+      label:
+        ja: "ローリング期間"
+        en: "Rolling window"
+    refresh:
+      value:
+        ja: "月次更新"
+        en: "Monthly"
+      label:
+        ja: "更新頻度"
+        en: "Refresh cadence"
+    ai:
+      value:
+        ja: "AIサマリー"
+        en: "AI Summary"
+      label:
+        ja: "分析モード"
+        en: "Analysis mode"
+  highlights:
+    trend:
+      title:
+        ja: "勢いを一目で把握"
+        en: "Spot momentum instantly"
+      description:
+        ja: "直近12カ月の推移から伸びと減速の兆しを見抜きます。"
+        en: "Reveal acceleration and slowdowns across the latest 12-month trend."
+    copilot:
+      title:
+        ja: "AIが要点を要約"
+        en: "AI distills the signal"
+      description:
+        ja: "コパイロットがKPIの変化要因や注目SKUを短時間で提案します。"
+        en: "Copilot surfaces KPI drivers and key SKUs in seconds."
+    workflow:
+      title:
+        ja: "次のアクションを導く"
+        en: "Guide the next action"
+      description:
+        ja: "ランキング・比較・異常検知まで一気通貫で深掘りできます。"
+        en: "Move seamlessly from rankings to comparisons and anomaly scouting."
   elegant_toggle:
     label:
       ja: "品格UI"
